--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-* {
+* { 
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color:black ;
 }
 
 html {
@@ -41,18 +42,19 @@ nav {
 
 .nav-links {
   gap: 2rem;
+  
   list-style: none;
   font-size: 1.5rem;
 }
 
 a {
-  color: black;
+  color: white;
   text-decoration: none;
   text-decoration-color: white;
 }
 
 a:hover {
-  color: grey;
+  color: white;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
@@ -60,6 +62,7 @@ a:hover {
 
 .logo {
   font-size: 2rem;
+  color: white;
 }
 
 .logo:hover {
@@ -158,6 +161,7 @@ section {
 
 .section-container {
   display: flex;
+  
 }
 
 /* PROFILE SECTION */
@@ -178,6 +182,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  color: grey;
 }
 
 .section__text {
@@ -191,16 +196,19 @@ section {
 
 .section__text__p1 {
   text-align: center;
+  color:white
 }
 
 .section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem;
+  color: white;
 }
 
 .title {
   font-size: 3rem;
   text-align: center;
+  color: white;
 }
 
 #socials-container {
@@ -208,6 +216,7 @@ section {
   justify-content: center;
   margin-top: 1rem;
   gap: 1rem;
+  
 }
 
 /* ICONS */
@@ -215,6 +224,7 @@ section {
 .icon {
   cursor: pointer;
   height: 2rem;
+  
 }
 
 /* BUTTONS */
@@ -234,8 +244,11 @@ section {
 }
 
 .btn-color-1,
+
+  
 .btn-color-2 {
   border: rgb(53, 53, 53) 0.1rem solid;
+  color: white;
 }
 
 .btn-color-1:hover,
@@ -269,6 +282,7 @@ section {
 
 #about {
   position: relative;
+  
 }
 
 .about-containers {
@@ -318,6 +332,9 @@ section {
   margin: auto 0;
 }
 
+.text-container p{
+  color: white;
+}
 /* EXPERIENCE SECTION */
 
 #experience {
